--- a/public/themes/admin/assets/css/lavalite.css
+++ b/public/themes/admin/assets/css/lavalite.css
@@ -1005,7 +1005,6 @@ a:focus {
   color: #444444;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
   padding: 10px;
 }
 .navbar-nav > .notifications-menu > .dropdown-menu > li .menu > li > a > .glyphicon,
@@ -2540,6 +2539,24 @@ a:focus {
 .nav-tabs-custom .dropdown.open > a:focus {
   background: transparent;
   color: #999;
+}
+.nav-tabs-custom.tab-primary > .nav-tabs > li.active {
+  border-top-color: #3c8dbc;
+}
+.nav-tabs-custom.tab-info > .nav-tabs > li.active {
+  border-top-color: #00c0ef;
+}
+.nav-tabs-custom.tab-danger > .nav-tabs > li.active {
+  border-top-color: #dd4b39;
+}
+.nav-tabs-custom.tab-warning > .nav-tabs > li.active {
+  border-top-color: #f39c12;
+}
+.nav-tabs-custom.tab-success > .nav-tabs > li.active {
+  border-top-color: #00a65a;
+}
+.nav-tabs-custom.tab-default > .nav-tabs > li.active {
+  border-top-color: #d2d6de;
 }
 /* PAGINATION */
 .pagination > li > a {
