--- a/public/themes/admin/assets/css/styles.css
+++ b/public/themes/admin/assets/css/styles.css
@@ -187,3 +187,12 @@ box-shadow:1px 1px 0 rgba(255, 255, 255, 0.2) inset;
   margin-top: 5px;
   font-size: 12px;
 }
+.dropzone {
+    min-height: 150px;
+    border: 1px dashed rgba(0,0,0,0.3);
+    background: white;
+    padding: 20px 20px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
