--- a/public/themes/public/assets/css/style.css
+++ b/public/themes/public/assets/css/style.css
@@ -221,6 +221,10 @@ a {
     color: #555;
     padding: 0 1.4em;
 }
+.navbar-nav>li{
+    padding-left: 5px;
+    padding-right: 5px;
+}
 
 .navbar.navbar-default .navbar-links>li {
     display: inline-block;
