--- a/public/themes/public/assets/css/user.css
+++ b/public/themes/public/assets/css/user.css
@@ -1,3 +1,6 @@
+body.user sup {
+  color: #ea453e;
+}
 body.user header.header .navbar {
   margin-bottom: 0;
   border-radius: 0;
@@ -86,6 +89,23 @@ body.user header.header .navbar-default .navbar-toggle .icon-bar {
 body.user .footer .footer-links {
   background-color: #4c5667;
   border-top: 2px solid #ea453e;
+}
+body.user header.header .navbar-nav .dropdown-menu {
+    padding: 0px 0;
+    margin: 2px 0 0;
+    font-size: 11px;
+    border: none;
+    border-radius: 0px;
+}
+body.user header.header .navbar-nav .dropdown-menu>li>a {
+    padding: 8px 20px;
+    text-transform: uppercase;
+}
+body.user header.header .navbar-nav .dropdown-menu>li>a:focus, 
+body.user header.header .navbar-nav .dropdown-menu>li>a:hover {
+    color: #fff;
+    text-decoration: none;
+    background-color: #ea453e;
 }
 body.user .footer .footer-links .copyright {
     text-align: center;
@@ -244,6 +264,7 @@ body.user .dashboard-wraper .dashboard-content .popular-post-block .dashboard-bl
   float: left;
   min-height: 112px;
   position: relative;
+  width: 85%;
 }
 body.user .dashboard-wraper .dashboard-content .popular-post-block .dashboard-blog-actions {
     width: 52px;
@@ -355,8 +376,161 @@ body.user .dashboard-wraper .dashboard-content .my-album-title-inner {
   font-size: 15px;
   font-weight: 600;
 }
-
-
+.text-red {
+  color: #dd4b39 !important;
+}
+.text-yellow {
+  color: #f39c12 !important;
+}
+.text-aqua {
+  color: #00c0ef !important;
+}
+.text-blue {
+  color: #0073b7 !important;
+}
+.text-black {
+  color: #111111 !important;
+}
+.text-light-blue {
+  color: #3c8dbc !important;
+}
+.text-green {
+  color: #00a65a !important;
+}
+.text-gray {
+  color: #d2d6de !important;
+}
+.text-navy {
+  color: #001f3f !important;
+}
+.text-teal {
+  color: #39cccc !important;
+}
+.text-olive {
+  color: #3d9970 !important;
+}
+.text-lime {
+  color: #32CD32 !important;
+}
+.text-orange {
+  color: #ff851b !important;
+}
+.text-fuchsia {
+  color: #FF0080 !important;
+}
+.text-purple {
+  color: #605ca8 !important;
+}
+.text-maroon {
+  color: #d81b60 !important;
+}
+.fc-color-picker {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.fc-color-picker > li {
+    float: left;
+    font-size: 30px;
+    margin-right: 5px;
+    line-height: 30px;
+}
+#external-events .external-event {
+  padding: 5px !important;
+  color: #fff;
+  margin-bottom: 3px;
+}
+.box-header .box-title {
+  text-transform: uppercase;
+  font-size: 18px;
+}
+.ibox .ibox-content h3 {
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-top: 0;
+}
+.ibox .ibox-content p.small {
+  margin-bottom: 20px !important;
+}
+.ibox .ibox-content .sortable-list {
+  padding-left: 0;
+  min-height: 300px;
+}
+.ibox .ibox-content .sortable-list li {
+  list-style: none;
+  background-color: #fff;
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.06), 0 2px 0px 0 rgba(0, 0, 0, 0.02);
+  padding: 5px 15px;
+  border-left: 3px solid #f76397;
+  margin-bottom: 10px;
+}
+.ibox .ibox-content .sortable-list li:nth-child(even) {
+  border-left-color: #7266ba;
+}
+.ibox .ibox-content {
+  min-height: 500px;
+}
+.ibox .ibox-content form {
+  margin-bottom: 20px;
+}
+.ibox .ibox-content form input {
+  font-size: 12px;
+}
+.ibox .ibox-content .sortable-list li .agile-detail {
+  font-size: 11px;
+}
+.ibox {
+  border: 1px dashed #ddd;
+  padding: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.user-message .panel-body {
+ margin-top: 15px;
+}
+.user-message .box-header .box-title {
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.user-message .nav-pills li a {
+  border-radius: 0;
+}
+.user-message .nav-pills li a .label {
+  line-height: 13px;
+}
+.user-message .nav-pills>li.active>a, .user-message .nav-pills>li.active>a:focus, .user-message .nav-pills>li.active>a:hover {
+  background-color: #7266ba;
+}
+.user-message #entry-message .box .box-header .box-title {
+  margin-top: 0;
+}
+.user-message #entry-message .mailbox-controls {
+  margin-bottom: 20px;
+}
+.user-message #entry-message .mailbox-messages .table {
+  background-color: #eee;
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.06), 0 2px 0px 0 rgba(0, 0, 0, 0.02);
+}
+.user-message #entry-message .mailbox-messages .table tr:hover {
+  background-color: #ddd;
+}
+.user-message #entry-message .mailbox-messages .table tr.check-read td.mail-select {
+    padding: 12px 20px;
+}
+.user-message #entry-message .mailbox-messages .table tr.check-read td.mail-select .checkbox {
+  margin: 0;
+}
+.user-message #entry-message .mailbox-messages .table tr.check-read td.mail-select .checkbox label  {
+  min-height: 14px;
+}
+.user-message #entry-message .mailbox-messages .table>tbody>tr>td {
+  vertical-align: middle;
+  border-top: 1px solid #fff;
+}
+.thumb-sm {
+    height: 32px;
+    width: 32px;
+}
 
 @media only screen and (max-width: 1024px) {
       body.user .dashboard-wraper .dashboard-content .popular-post-img {
@@ -522,4 +696,77 @@ body.user .dashboard-wraper .wysihtml5-toolbar .wysihtml5-command-active {
 }
 body.user .dashboard-wraper .profile-pic .dropzone {
     min-height: 185px;
+}
+
+body.user .dashboard-wraper .dropzone .dz-default.dz-message {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+    -webkit-transition: opacity 0.3s ease-in-out;
+    -moz-transition: opacity 0.3s ease-in-out;
+    -o-transition: opacity 0.3s ease-in-out;
+    -ms-transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
+    background-image: url("../../../../img/spritemap.png");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    position: absolute;
+    width: 428px;
+    height: 123px;
+    margin-left: -214px;
+    margin-top: -61.5px;
+    top: 50%;
+    left: 50%;
+}
+body.user .dashboard-wraper .dropzone .dz-default.dz-message span {
+    display: none;
+}
+body.user .dashboard-wraper .dropzone {
+    border: 1px solid rgba(0,0,0,0.03);
+    min-height: 140px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    background: rgba(0,0,0,0.03);
+    padding: 23px;
+    position: relative;
+}
+body.user .dashboard-wraper .dashboard-content .news-gadget-box {
+    padding: 10px;
+    margin-bottom: 20px;
+    background-color: #fafafa;
+    border-left: 3px solid #f76397;
+}
+body.user .dashboard-wraper .dashboard-content  .discussion-widget-block {
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-bottom: 2px solid #00b19d;
+}
+body.user .dashboard-wraper .dashboard-content  .discussion-widget-block .media-left img.media-object {
+  width: 64px;
+  height: 64px;
+}
+body.user .dashboard-wraper .dashboard-content .discussion-detail .media-list .media .media-object  {
+  width: 64px;
+  height: 64px;
+}
+body.user .dashboard-wraper .dashboard-content .discussion-detail .media-list .media .media-body hr {
+  background-color: #f5f5f5;
+  border: none;
+  height: 2px;
+} 
+body.user .dashboard-wraper .dashboard-content .discussion-detail .media-list .media .media-body .discussion-actions a.btn {
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 11px;
+    padding: 3px 10px;
+    border-radius: 3px;
+}
+body.user .dashboard-wraper .dashboard-content .discussion-detail .media-list .media .media-body .media {
+  border-bottom: 2px dashed #f5f5f5;
+  padding-bottom: 20px;
+}
+body.user .dashboard-wraper .fc-time-grid, .fc-time-grid-container {
+    position: relative;
+    z-index: 1;
+    height: auto !important;
 }
